feat(hydra): trigger deployment change on config/secret change

--- a/helm/charts/hydra/templates/deployment.yaml
+++ b/helm/charts/hydra/templates/deployment.yaml
@@ -11,6 +11,8 @@ metadata:
       {{- toYaml . | nindent 4 }}
     {{- end }}
   annotations:
+    checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+    checksum/secrets: {{ include (print $.Template.BasePath "/secrets.yaml") . | sha256sum }}
     {{- with .Values.deployment.annotations }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
